--- a/index.css
+++ b/index.css
@@ -207,6 +207,7 @@ NAV BAR
     justify-content: flex-start;
     border: 1px solid rgba(172, 172, 172, 0.75);
     border-radius: 10px;
+    transition: all 300ms ease;
 }
 
 .menu__links{
