--- a/index.css
+++ b/index.css
@@ -804,10 +804,11 @@ TESTIMONIALS
 #testimonials{
     height: fit-content;
     max-width: 1200px;
-    margin: 40px auto 0 auto;
+    margin: 80px auto 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 80px auto;
 }
 
 .testimonials__image{
@@ -819,6 +820,8 @@ TESTIMONIALS
     flex-direction: column;
     width: 45%;
     height: 90%;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .testimonials__title{
