--- a/index.css
+++ b/index.css
@@ -12,15 +12,13 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html{
-    position: relative;
-    display: flex;
-    flex-direction: column;
+footer::after{
+    content: none;
 }
 
 body{
-    margin: 0 16px;
-
+    margin: 0 8px;
+    padding: 0 16px;
 }
 
 header{
@@ -155,13 +153,14 @@ NAV BAR
 }
 
 .logo__image{
-    height: 12%;
-    width: 12%;
+    height: 15%;
+    width: 15%;
 }
 
 .logo__name{
-    font-weight: bold;
-    font-size: 32px XRD;
+    font-weight: 900;
+    font-stretch:extra-expanded;
+    font-size: 24px;
     margin-left: 4px;
     padding: 0;
     text-decoration: none;
@@ -183,6 +182,7 @@ NAV BAR
 
 .link{
     font-weight: bold;
+    font-size: 14px;
 }
 
 .open-menu__btn{
@@ -205,7 +205,7 @@ NAV BAR
     height: 50vh;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     border: 1px solid rgba(172, 172, 172, 0.75);
     border-radius: 10px;
     transition: all 300ms ease;
@@ -231,6 +231,7 @@ NAV BAR
     padding: 8px;
     margin: 8px;
     font-weight: bold;
+    color: black;
 }
 
 .user__link{
@@ -258,6 +259,7 @@ NAV BAR
     padding: 0;
 }
 
+
 .menu--open .open-menu__btn{
     display: none;
 }
@@ -274,10 +276,10 @@ LANDING
 */
 
 #landing{
-    height: calc(100% - 40px);
     margin: 0 auto;
     flex-grow: 0;
     height: fit-content;
+    margin-top: 40px;
 }
 
 .landing__top{
@@ -297,24 +299,56 @@ LANDING
     font-size: 20px;
 }
 
+.landing__text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    
+}
+
+.landing__mid{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: stretch;
+}
+
 .landing__form{
     display: flex;
     align-items: center;
-    width: 80%;
-    border: 2px solid gray;
+    width: 100%;
     justify-content: space-between;
     margin: 16px;
-    margin-bottom: 24px;
+    margin-bottom: 30px;
     border-radius: 20px;
     padding: 4px;
+    position: relative;
 }
 
 .landing__input{
-    border: none;
+    border: 2px solid rgba(128, 128, 128, 0.767);
     max-width: 100%;
-    margin-left: 16px;
-    padding-right: 15%;
+    margin-left: -16px;
+    padding-right: 65%;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    border-radius: 50px;
+    width: 102%;
+}
 
+.landing__button{
+    position: absolute;
+    right: 8%;
+    padding: 8px; 
+    border-radius: 32px;
+    font-size: large;
+}
+
+.landing__customers{
+    margin-top: 30px;
 }
 
 .landing__aside{
@@ -324,7 +358,11 @@ LANDING
 
 .customers__image{
     opacity: 0.5;
-    width: 70%;
+    width: 100%;
+}
+
+.landing__image--wrapper{
+    width: 180%;
 }
 
 /*
@@ -436,6 +474,7 @@ QUALITY
     width: 60%;
     display: flex;
     flex-direction: column;
+    padding-right: 24px;
 }
 
 .quality__title{
@@ -480,7 +519,7 @@ STEPS
 .steps__group{
     align-items: flex-start;
     justify-content: center;
-    padding-left: 16px;
+    padding-left: 24px;
 }
 
 .steps__list{
@@ -546,7 +585,8 @@ VALUES
 
 .values__subtitle{
     font-size: 20px;
-    color: rgba(172, 172, 172, 0.95)
+    color: rgba(172, 172, 172, 0.95);
+    padding-right: 32 px;
 }
 
 .values__list{
@@ -589,7 +629,7 @@ VALUES
 }
 
 .values__image{
-    width: 85%;
+    width: 100%;
 }
 
 /*
@@ -718,10 +758,10 @@ PRICING
     color: rgba(172, 172, 172, 0.75);
 }
 
-.pricing__top--divider{
+.pricing__top--divider,
+.pricing__mid--divider{
     border: 1px solid rgba(172, 172, 172, 0.671);
-    width: 121%;
-    height: 1px;
+    width: calc(100% + 48px);
 }
 
 .pricing__entry--mid{
@@ -747,11 +787,6 @@ PRICING
     text-align: start;
     padding: 14px 0;
     color: rgba(172, 172, 172, 0.671);
-}
-
-.pricing__mid--divider{
-    width: 121%;
-    border: 1px solid rgba(172, 172, 172, 0.671);
 }
 
 .pricing__entry--bottom{
@@ -813,6 +848,7 @@ TESTIMONIALS
 
 .testimonials__image{
     width: 50%;
+    transform: translateX(-16px);
 }
 
 .testimonials__container{
@@ -1039,12 +1075,23 @@ QUICK START
     color: white;
 }
 
+.quick-start__btns{
+    display: flex;
+    flex-wrap: wrap;
+    height: fit-content;
+    width: fit-content;
+    justify-content: center;
+    max-width: 40%;
+}
+
 .quick-start__btn--start{
     color: white;
     background-color: #f66a6a;
     font-size: 16px;
     padding: 20px 30px;
     border-radius: 40px;
+    margin-right: 8px;
+    margin-bottom: 16px;
 }
 
 .quick-start__btn--contact{
@@ -1054,6 +1101,7 @@ QUICK START
     font-size: 16px;
     padding: 20px 30px;
     border-radius: 40px;
+    margin-bottom: 16px;
 }
 
 /*
@@ -1077,7 +1125,7 @@ footer{
 }
 
 .footer__link--lists{
-    width: 90%;
+    width: 75%;
     display: flex;
     justify-content: space-between;
 }
@@ -1180,7 +1228,7 @@ footer{
     .landing-change{
         flex-direction: column;
 
-        max-width: 70%;
+        max-width: 90%;
 
     }
 
@@ -1215,6 +1263,11 @@ footer{
         justify-content: center;
     }
 
+    .landing__image--wrapper{
+        max-width: 100%;
+        padding-top: 32px;
+    }
+
     #landing{
         padding-bottom: 80px;
         height: fit-content;
@@ -1239,6 +1292,12 @@ footer{
     .pricing__entry--who{
         font-size: medium;
     }
+
+    .fa-times{
+        border: none;
+    }
+
+
 }
 
 /* Tablets */
@@ -1252,22 +1311,64 @@ footer{
     .values__entry--description{
         font-size: small;
     }
+
+    .fa-times{
+        border: none;
+    }
+
+    .quick-start__text{
+        text-align: center;
+    }
+    .values__row{
+        flex-direction: column;
+    }
 }
 
 /* Mobile Phones */
 
 @media (max-width: 576px) {
 
+    .landing__form{
+        flex-direction: column;
+    }
+
+    .landing__button{
+        left: 0;
+        right: 16px;
+        top: 72px;
+    }
+
     .landing__input{
         padding-right: 16px;
+    }
+
+    .features__text{
+        max-width: 100%;
     }
 
     .features__list{
         justify-content: center;
     }
 
+    .features__item{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .list__text{
+        align-items: center;
+        justify-content: center;
+        margin: 16px auto;
+    }
+
+    .list__description{
+        text-align: center;
+    }
+
     .row{
         flex-direction: column;
+        width: 95%;
     }
 
     .quality__container{
@@ -1275,6 +1376,15 @@ footer{
         align-items: center;
         overflow: visible;
         height: 100vh;
+        width: 80%;
+    }
+
+    .text{
+        max-width: 80%
+    }
+
+    .quality__subtitle{
+        text-align: center;
     }
 
     .quality__image{
@@ -1283,6 +1393,34 @@ footer{
 
     .steps__group{
         align-items: center;
+    }
+
+    .steps__list{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .steps__entry{
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .steps__entry--text{
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .steps__entry--number{
+        margin: 8px auto;
+    }
+
+    .steps__entry--description{
+        text-align: center;
     }
 
     .steps__image{
@@ -1307,6 +1445,10 @@ footer{
         justify-content: space-between;
     }
 
+    .pricing__text{
+        width: 90%;
+    }
+
     .pricing__list{
         flex-direction: column;
         align-items: center;
@@ -1314,8 +1456,8 @@ footer{
 
     .pricing__entry--color{
         max-width: 90%;
-        width: 52%;
-        padding-bottom: 16px;
+        width: 60%;
+        margin-bottom: 32px;
     }
 
     .reverse{
@@ -1329,11 +1471,13 @@ footer{
     .testimonials__image{
         max-width: 80%;
         width: 80%;
+        transform: translateX(0);
     }
 
     .testimonials__container{
         align-items: center;
         justify-content: center;
+        width: 95%;
     }
 
     .testimonials__title, 
@@ -1408,6 +1552,7 @@ footer{
 
     footer{
         height: fit-content;
+        margin-bottom: 0;
     }
 
     .footer__link--lists{
@@ -1426,6 +1571,10 @@ footer{
         align-items: center;
     }
 
+    .footer__link{
+        text-align: center;
+    }
+
     .footer__finals{
         flex-direction: column;
         align-items: center;
@@ -1442,5 +1591,9 @@ footer{
 
     .footer__socials{
         justify-content: center;
+    }
+
+    .fa-times{
+        border: none;
     }
 }
